5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4065/executions/1706_3051.log
== TEST (2019-04-29 19:04:09) 
-- CODE:
x = float(input("consumo de energia: "))

if(x >= 0) and (x <= 150):
	tarifa = 0.60
	taxa = 5
	valor = (x * tarifa) + taxa
	print(round(valor,2))
-- OUTPUT:
84.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 19:06:35) 
-- CODE:
x = float(input("consumo de energia: "))

if(x >= 0) and (x <= 150):
	tarifa = 0.60
	taxa = 5
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 150) and (x <= 250):
	tarifa = 0.65
	taxa = 8
	
	
	
	
	
	
-- EXECUTION TIME:
0.18139
-- TEST CASE 1:
---- input:
132
---- correct output:
84.2
---- user output:
84.2
-- TEST CASE 2:
---- input:
852
---- correct output:
655.0
---- user output:

-- TEST CASE 3:
---- input:
9999
---- correct output:
7515.25
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:07:40) 
-- CODE:
x = float(input("consumo de energia: "))

if(x >= 0) and (x <= 150):
	tarifa = 0.60
	taxa = 5
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 150) and (x <= 250):
	tarifa = 0.65
	taxa = 8
	valor = (x * tarifa) + taxa
	print(round(valor,2))
	
	
	
	
	
	
	
-- OUTPUT:
84.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:10:19) 
-- CODE:
x = float(input("consumo de energia: "))

if(x >= 0) and (x <= 150):
	tarifa = 0.60
	taxa = 5
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 150) and (x <= 250):
	tarifa = 0.65
	taxa = 8
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 250) and (x <= 350):
	tarifa = 0.70
	taxa = 12
	valor = (x * tarifa) + taxa
	print(round(valor,2))
	
	
	
	
	
	
	
	
-- OUTPUT:
84.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:11:22) 
-- CODE:
x = float(input("consumo de energia: "))

if(x >= 0) and (x <= 150):
	tarifa = 0.60
	taxa = 5
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 150) and (x <= 250):
	tarifa = 0.65
	taxa = 8
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 250) and (x <= 350):
	tarifa = 0.70
	taxa = 12
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 350)
	
	
	
	
	
	
	
	
-- ERROR:
File "XXXX", line 18
    elif(x > 350)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:12:45) 
-- CODE:
x = float(input("consumo de energia: "))

if(x >= 0) and (x <= 150):
	tarifa = 0.60
	taxa = 5
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 150) and (x <= 250):
	tarifa = 0.65
	taxa = 8
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 250) and (x <= 350):
	tarifa = 0.70
	taxa = 12
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 350):
	tarifa = 0.75
	taxa = 16
	valor = (x * tarifa) + taxa
	print(round(valor,2))

	
	
	
	
	
	
	
	
-- OUTPUT:
84.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:12:56) 
-- CODE:
x = float(input("consumo de energia: "))

if(x >= 0) and (x <= 150):
	tarifa = 0.60
	taxa = 5
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 150) and (x <= 250):
	tarifa = 0.65
	taxa = 8
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 250) and (x <= 350):
	tarifa = 0.70
	taxa = 12
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 350):
	tarifa = 0.75
	taxa = 16
	valor = (x * tarifa) + taxa
	print(round(valor,2))

	
	
	
	
	
	
	
	
-- OUTPUT:
84.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 19:13:09) 
-- CODE:
x = float(input("consumo de energia: "))

if(x >= 0) and (x <= 150):
	tarifa = 0.60
	taxa = 5
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 150) and (x <= 250):
	tarifa = 0.65
	taxa = 8
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 250) and (x <= 350):
	tarifa = 0.70
	taxa = 12
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 350):
	tarifa = 0.75
	taxa = 16
	valor = (x * tarifa) + taxa
	print(round(valor,2))

	
	
	
	
	
	
	
	
-- EXECUTION TIME:
0.201311
-- TEST CASE 1:
---- input:
132
---- correct output:
84.2
---- user output:
84.2
-- TEST CASE 2:
---- input:
852
---- correct output:
655.0
---- user output:
655.0
-- TEST CASE 3:
---- input:
9999
---- correct output:
7515.25
---- user output:
7515.25
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
